--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "eslint-plugin-tailwindcss": "^3.13.0",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "swiper": "^10.1.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
