--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.4.0",
     "eslint-plugin-tailwindcss": "^3.13.0",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
