--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.2",
     "react-router-dom": "^6.14.2",
+    "sweetalert2": "^11.7.27",
     "swiper": "^10.1.0"
   },
   "devDependencies": {
