--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.5",
+    "atropos": "^2.0.2",
     "axios": "^1.4.0",
     "eslint-plugin-tailwindcss": "^3.13.0",
     "prop-types": "^15.8.1",
